--- a/index.html
+++ b/index.html
@@ -495,11 +495,23 @@
                   </div>
                   
                 <p>専門家との連携、ログ機能、そして親子のコミュニケーションをサポートするツール。</p>
-                <a href="https://play.google.com/store/apps" class="btn btn-success me-2">Google Play</a>
-                <a href="https://www.apple.com/jp/ios/app-store/" class="btn btn-primary">App Store</a>
+                <!-- Google Play ボタン -->
+            <div class="col-auto mb-3">
+                <a href="https://play.google.com/store/apps" class="btn btn-lg btn-download">
+                    <img src="images/google-play-badge.png" alt="Google Playで入手" class="img-fluid"
+                        style="max-height: 60px;">
+                </a>
+            </div>
+            <!-- App Store ボタン -->
+            <div class="col-auto mb-3">
+                <a href="https://www.apple.com/jp/ios/app-store/" class="btn btn-lg btn-download">
+                    <img src="images/app-store-badge.png" alt="App Storeで入手" class="img-fluid"
+                        style="max-height: 60px;">
+                </a>
+            </div>
             </div>
             <div class="col-md-6 text-center" data-aos="zoom-in">
-                <img src="images/app_image0.png" alt="アプリイメージ" class="img-fluid">
+                <img src="images/dl_app_image.png" alt="アプリイメージ" class="img-fluid">
             </div>
         </div>
     </div>
@@ -560,7 +572,7 @@
                     </ul>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <h5>ソーシャルメディア</h5>
+                    <!-- <h5>ソーシャルメディア</h5> -->
                     <a href="#" class="text-light me-2"><i class="fab fa-facebook"></i></a>
                     <a href="#" class="text-light me-2"><i class="fab fa-twitter"></i></a>
                     <a href="#" class="text-light"><i class="fab fa-instagram"></i></a>
