--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
         <div class="row mb-5 align-items-center">
             <!-- タイトルと本文 -->
             <div class="col-lg-6" data-aos="fade-up">
-              <h5 class="card-title">ログ機能</h5>
+              <h1 class="text-warning display-2">01</h1>
+                <h5 class="card-title">ログ機能</h5>
               <p class="card-text">
                 子供と親の活動や感情を簡単に記録できます。毎日の小さな変化も捉え、より良いコミュニケーションへと導きます。
               </p>
@@ -170,7 +171,9 @@
         <!-- 例：チャット機能 -->
         <div class="row mb-5 align-items-center">
             <!-- タイトルとテキスト -->
+            
             <div class="col-lg-6 order-lg-2" data-aos="fade-up" data-aos-delay="100">
+                <h1 class="text-warning display-2">02</h1>
                 <h5 class="card-title">チャット機能</h5>
                 <p class="card-text">
                   いつでも専門家に相談が可能。子供の状況に合わせた専門的なアドバイスが受けられます。
@@ -186,8 +189,10 @@
         <!-- 例：ダッシュボード機能 -->
         <div class="row mb-5 align-items-center">
             <!-- タイトルとテキスト -->
+            
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-              <h5 class="card-title">ダッシュボード機能</h5>
+                <h1 class="text-warning display-2">03</h1>
+                <h5 class="card-title">ダッシュボード機能</h5>
               <p class="card-text">
                 記録したデータを視覚的に分析。子供の成長や変化のトレンドを簡単に確認できます。
               </p>
